@@ -14,6 +14,8 @@ AC_COPYRIGHT([Copyright (C) 2005-2014 Christoph Rupp (chris@crupp.de)])
 AC_CANONICAL_HOST
 AC_ENABLE_SHARED
 AC_ENABLE_STATIC
+: ${CFLAGS="-O3"} 
+: ${CXXFLAGS="-O3"} 
 AC_PROG_CC
 AC_PROG_CC_STDC
 AC_PROG_CXX
