@@ -1,3 +1,6 @@
+Feb 03, 2015 - chris ---------------------------------------------------
+o Default compilation flag is now -O3
+
 Jan 23, 2015 - chris ---------------------------------------------------
 o Fixed FreeBSD compilation errors (thanks, Heping Wen)
 
